# httprs

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  cli.rs  client.rs  download.rs  lib.rs  main.rs  request.rs  response.rs  timing.rs
